--- a/index.htm
+++ b/index.htm
@@ -43,18 +43,18 @@
                          <!--Course one-->
                         <tr>
                             <td>
-                                <label for="course-one">
-                                    <input type="text" name="course" id="course-one" required class="course" placeholder="Course Code">
+                                <label for="course-1">
+                                    <input type="text" name="course" id="course-1" required class="course" placeholder="Code">
                                 </label>
                             </td>
                             <td>
-                                <label for="unit-one">
+                                <label for="unit-1">
                                     <input type="number" name="unit" id="unit-1" min="1" max="9" required class="unit">
                                 </label>
                             </td>
                             <td>
-                                <label for="grade-one">
-                                    <select name="Grade" id="grade-one">                     
+                                <label for="grade-1">
+                                    <select name="Grade" id="grade-1">                     
                                         <option disabled selected>Grade</option>
                                         <option value="5">A</option>
                                         <option value="4">B</option>
@@ -76,17 +76,17 @@
                         <tr>
                             
                             <td>
-                                <label for="course-two">
-                                    <input type="text" name="course" id="course-two" required class="course" placeholder="Course Code">
+                                <label for="course-2">
+                                    <input type="text" name="course" id="course-2" required class="course" placeholder="Code">
                                 </label>
                             </td>
                             <td>
-                                <label for="unit-two">
-                                    <input type="number" name="unit" id="unit-two" min="1" max="9"  class='unit' required>
+                                <label for="unit-2">
+                                    <input type="number" name="unit" id="unit-2" min="1" max="9"  class='unit' required>
                                 </label>
                             </td>
                             <td>
-                                <label for="grade-two">
+                                <label for="grade-2">
                                     <select name="Grade" id="grade-two">                     
                                         <option disabled selected>Grade</option>
                                         <option value="5">A</option>
@@ -109,7 +109,7 @@
                         <tr>
                             <td>
                                 <label for="course-3">
-                                    <input type="text" name="course" id="course-3" required class="course" placeholder="Course Code">  
+                                    <input type="text" name="course" id="course-3" required class="course" placeholder="Code">  
                                 </label>
                             </td>
                             <td>
@@ -167,7 +167,7 @@
                         <tr>
                             <td>
                                 <label for="course-one">
-                                    <input type="text" name="course" id="course-one" required class="course" placeholder="Course Code">
+                                    <input type="text" name="course" id="course-one" required class="course" placeholder="Code">
                                 </label>
                             </td>
                             <td>
@@ -199,7 +199,7 @@
                         <tr>
                             <td>
                                 <label for="course-two">
-                                    <input type="text" name="course" id="course-two" required class="course" placeholder="Course Code">
+                                    <input type="text" name="course" id="course-two" required class="course" placeholder="Code">
                                 </label>
                             </td>
                             <td>
@@ -231,7 +231,7 @@
                         <tr>
                             <td>
                                 <label for="course-3">
-                                    <input type="text" name="course" id="course-3" required class="course" placeholder="Course Code">  
+                                    <input type="text" name="course" id="course-3" required class="course" placeholder="Code">  
                                 </label>
                             </td>
                             <td>
