--- a/index.htm
+++ b/index.htm
@@ -65,7 +65,7 @@
                                     </select>
                                 </label>
                             </td>
-                            <td>  
+                            <td class='cancel-wrapper'>  
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 cancel">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
                                   </svg>
@@ -98,7 +98,7 @@
                                     </select>
                                 </label>
                             </td>
-                            <td>  
+                            <td class='cancel-wrapper'>  
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 cancel">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
                                   </svg>
@@ -130,7 +130,7 @@
                                     </select>
                                 </label>
                             </td>
-                            <td>  
+                            <td class='cancel-wrapper'>  
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 cancel">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
                                   </svg>
@@ -188,7 +188,7 @@
                                     </select>
                                 </label>
                             </td>
-                            <td>  
+                            <td class='cancel-wrapper'>  
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 cancel">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
                                   </svg>
@@ -220,7 +220,7 @@
                                     </select>
                                 </label>
                             </td>
-                            <td>  
+                            <td class='cancel-wrapper'>  
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 cancel">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
                                   </svg>
@@ -252,7 +252,7 @@
                                     </select>
                                 </label>
                             </td>
-                            <td>  
+                            <td class='cancel-wrapper'>  
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 cancel">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
                                   </svg>
