--- a/index.htm
+++ b/index.htm
@@ -23,7 +23,7 @@
             <div class="header">
                 <h1 class="main-heading">Semester 1</h1>
                 <div class="add-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 icon">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
                       </svg>
                       
@@ -74,7 +74,6 @@
                         </tr>
                          <!--Course two-->
                         <tr>
-                            
                             <td>
                                 <label for="course-2">
                                     <input type="text" name="course" id="course-2" required class="course" placeholder="Code">
@@ -148,7 +147,7 @@
             <div class="header">
                 <h1 class="main-heading">Semester 2</h1>
                 <div class="add-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 icon">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
                       </svg>
                 </div>
@@ -311,7 +310,7 @@
                 </p>
         </div>
         <div class="footer">
-            <button class="add-semester">
+            <button class="add-semester reset">
                 RESET
             </button>
             <button class="add-semester">
