--- a/index.htm
+++ b/index.htm
@@ -191,7 +191,6 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 cancel">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
                                   </svg>
-                                  
                             </td>
                         </tr>
                          <!--Course two-->
@@ -304,16 +303,16 @@
             </ul>
         </div>
         <div class="cgpa">
-            <p class="report">Your Cumulative Grade Point Average (CGPA) is : <span> 0.00</span> 
+            <p class="report">Your Cumulative Grade Point Average (CGPA) is : <span class="cgpa-output"> 0.00</span> 
             </p>
-            <p class="report"> Class of grade: <span> NIL</span>
+            <p class="report"> Class of grade: <span class="grade-class"> NIL</span>
                 </p>
         </div>
         <div class="footer">
             <button class="add-semester reset">
                 RESET
             </button>
-            <button class="add-semester">
+            <button class="add-semester" id="calculate">
                 CALCULATE
             </button>
         </div>
